--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 
+<html>
+
+  <head>
+
+     <meta charset="utf-8">
+
+     <meta name="viewport" content="width=device-width">
+
+     <title>BÀI TẬP TIN HỌC 12</title>
+
+     <link href="style.css" rel="stylesheet" type="text/css"/>
+
+  </head>
+
+ <body>
+  <form>
+    <label> Tên đăng nhập:</label>
+    <input type="text" id="username" name="username"><br>
+    <label> mật khẩu:</label>
+    <input type="password" id="pass" name="pass">
+    <button type="submit" id="ok" name="ok" onclick=login()> Login </button>
+    
+  </form>
+   <script src="script.js"> </script>
+
+ </body>
+<html>
