--- a/Content/bai7-nv3.html
+++ b/Content/bai7-nv3.html
@@ -1,1 +1,8 @@
-
+<htnl>
+  <head>
+    <meta charset="utf-8">
+  </head>
+   <body>
+     <h1>thank you for your submission</h1>
+   </body>
+</htnl>
