--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
   <tr><td>
 <a href="Content/hai.html"target="nd">Gioithieubanthan</a> <br>
 <a href="Content/ba.html"target="nd">Thoikhoabieu</a> <br>
-<a href="Content/AI.html"target="nd">Huongnghiep</a>
+<a href="Content/AI.html"target="nd">Huongnghiep</a> <br>                                                      
+<a href="Content/gopy.html"target="nd">GopY</a> 
     <td> <iframe name=nd width="400" height="200" frameborder="1"></iframe></td>
 </body>
